# pixi-build-target-behavior

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pixi.toml
src/: CMakeLists.txt
